--- a/site-teste/site-teste/index.html
+++ b/site-teste/site-teste/index.html
@@ -1,11 +1,11 @@
-v<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <link rel="shortcut icon" href="batman logo.ico" type="image/x-icon">
-    <title>Batman, o homem morcego &copy; </title> <!--Também Cavaleiro das Trevas-->
+    <link rel="shortcut icon" href="imagens/batman logo.ico" type="image/x-icon">
+    <title>Batman, o homem morcego &copy; </title> <!--Também pode ser chamado de o Cavaleiro das Trevas-->
 </head>
 <body>
     <h1>Curiosidades que vc não sabia sobre o Batman. </h1>
@@ -35,6 +35,8 @@ Zack Snyder para o filme Batman v Superman.   </p>
     Foi a primeira vez que a expressão "<u>Batman</u>" foi utilizada num
 filme. </p>
 <p>O filme era bem estranho e abstrato, diferente daquilo que o público atual está habituado.</p>
+<p>Inclusive, assista ao trailer do mais recente filme do héroia seguir:</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rsQEor4y2hg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <hr>
 
 <h2>3. Ele já foi guardião de Nova Iorque </h2>
