--- a/site-teste/site-teste/index.html
+++ b/site-teste/site-teste/index.html
@@ -6,6 +6,7 @@
     , initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/batman logo.ico" type="image/x-icon">
     <title>Batman, o homem morcego &copy; </title> <!--Também pode ser chamado de o Cavaleiro das Trevas-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Curiosidades que vc não sabia sobre o Batman. </h1>
@@ -69,6 +70,8 @@ numa cidade fictícia. </p>
 <p>Isso aconteceu em um  dos raros crossovers entre os personagens da Marvel e da DC, 
 fo o criado o <b>Garra das Trevas</b>, uma fusão entre esses personagens, e  seu alter-ego <u>Logan Wayne </u>
 </p>
+
+<p>Para saber toda a história do Batman, clique <a href="pag002.html">aqui</a></p>
 
 
 
