--- a/site-teste/site-teste/pag002.html
+++ b/site-teste/site-teste/pag002.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="imagens/batman logo.ico" type="image/x-icon">
+  <title>Batman Origens &copy;</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <h1>A Origem do Batman</h1>
+  <img src="imagens/bruce wayne.jpg" alt="The Batman (2022)">
+  <p>O Batman teve sua história de origem repetida de forma diferente várias vezes ao longo de seus muitos anos de publicação, com variações
+    significativas de continuidade.
+  </p>
+  <h2>História</h2>
+   <h3>Era de Ouro</h3>
+   <p>Na primeira versão durante a <u>Era de Ouro</u>, a primeira aparição de Batman em <b>Dectective Comics #27</b>, ele já estava operando
+  como um combatente do crime. A  origem de Batman é apresentada pela primeira vez em <b>Dectective Comics #33</b>(novembro de 1939), e é
+posteriormente desenvolvida em <u>Batman #47</u>. Como esses quadrinhos afirmam, Bruce Wayne nasceu do Dr. Thomas Wayne e sua esposa Martha
+, dois socialites de <u>Gotham City</u>, muito ricos e caridosos em 1915. ruce é criado na <u>Mansão Wayne</u> com seu rico esplendor e vive
+uma existência feliz e privilegiada até os seus oito anos de idade, quando seus pais são mortos por um criminoso pequeno, chamado <b>Joe Chill</b>
+, enquantose dirigiam para casa de uma sala de cinema. Bruce Wayne jura um juramento de livrar a cidade do mal que havia levado a vida de seus pais.
+ Ele se envolve em ntenso treinamento intelectual e fíico. No entanto, ele percebe que essas habilidades por si só não seriam suficientes 
+. "Os criminosos são supersticiosos e covardes demais", observa Wayne, "então meu disfarce eve atacar o terror em seus corações. Eu devo ser 
+ser uma criatura da noite, sombrio e terrível..." Como se estivesse respodendoa seus desejos, um morcego de repente voa através da janela 
+, inspirando Bruce a assumir a personalidade de <u>Batman</u>.  </p>
+<p>Em tiras iniciais, a carreira de Batman como vigilante ganha-lhe a ira da polícia. Durante este período, Wayne tem uma noiva chamada Julie 
+  Madison. Wayne pega um acrobata órfão de circo, <b>Dick Grayson</b>, que se torna seu ajudante, <u>Robin</u>. Batman também se tornou um membro 
+  fundador da <u>Sociedade da Justiça da América</u>, embora ele,como <b>Superman</b>, seja um membro honorário e, portanto, apenas participe 
+  ocasionalmente. O relacionamento de Batman com a lei se descongela rapidamente e ele se torna um membro honorário de <u>Departamento de polícia
+    de Gotham City</u>. Durante este tempo, o mordomo <b>Alfred Pennyworth</b> chega a Mansão Wayne, e depois de deduzir as identidades secretas 
+    da Dupla Dinâmica junta-se ao seu serviço.
+</p>
+<h3>Era de Prata</h3>
+<p></p>
 </body>
 </html>
